--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <div id="root">rottt
-    <h1>hh11</h1>
+  <div id="root">
+
   </div>
   <script type="module" src="./src/main.jsx">  </script>
 </body>
